# OpenGLStarter

./: .gitignore  CMakeLists.txt  README.md  linux_readme.txt  raspberry_pi_readme.txt  toolchain-macos-openmp.cmake
cmake/: detect_rpi.cmake  (+13 more)
lgpl/librtmp/: CMakeLists.txt
lgpl/librtmp/openssl/: COMPILE_PARAMETERS  HowToBuild_OpenSSL_Windows.md
lgpl/librtmp/openssl/lib_win32/: libcrypto.def  libcrypto.lib  libssl.lib
lgpl/librtmp/openssl/lib_win64/: libcrypto.lib  libssl.lib
lgpl/librtmp/src/: Makefile  dh.h  handshake.h  hashswf.c  rtmp.c  rtmp_sys.h
lib/aribeiro/: CMakeLists.txt
lib/aribeiro/src/: aribeiro.h  common.h
lib/aribeiro/src/math/: AABB.cpp  AABB.h  BresenhamIterator.cpp  BresenhamIterator.h  EasingEquations.h  all_math.h  constants.h  floatOPs.h  geometricOperations.cpp  geometricOperations.h  mat4.cpp  mat4.h  quat.cpp  quat.h  tensor4.cpp  tensor4.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
lib/aribeiro/src/opengl/: GLFramebufferObject.cpp  GLFramebufferObject.h  GLPostProcess.cpp  GLPostProcess.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLVertexArrayObject.cpp  GLVertexArrayObject.h  GLVertexBufferObject.cpp  GLVertexBufferObject.h
lib/aribeiro/src/platform/: PlatformGL.cpp  PlatformGL.h  PlatformMutex.cpp  PlatformMutex.h  PlatformPath.cpp  PlatformPath.h  PlatformSleep.cpp  PlatformSleep.h  PlatformThread.cpp  PlatformThread.h  PlatformTime.cpp  PlatformTime.h
lib/convertutf/: CMakeLists.txt
lib/convertutf/src/: ConvertUTF.h
lib/glew/: CMakeLists.txt
lib/glew/src/: glew.c  glew.h  glxew.h
lib/randomlib/: CMakeLists.txt
lib/randomlib/src/: Random.cpp
projects-lib/ffmpeg-wrapper/: CMakeLists.txt  FFmpegADTSMuxer.cpp  FFmpegADTSMuxer.h  FFmpegAudioEncoder.cpp  FFmpegAudioEncoder.h  FFmpegAudioFrameConverter.cpp  FFmpegAudioFrameConverter.h  FFmpegBitstreamFilterADTStoASC.cpp  FFmpegBitstreamFilterADTStoASC.h  FFmpegCommon.cpp  FFmpegCommon.h
projects-lib/rtaudio-wrapper/: AudioResampler.h  CMakeLists.txt  RTAudioHelper.cpp  RTAudioHelper.h  RTAudioInput.h  common.h  int24_t.h  int_lerp.h  uint32_gcd.h
projects/AACEncoderRT/: CMakeLists.txt  FFmpegADTSMuxer.h  FFmpegAudioEncoder.h  FFmpegInit.cpp  FFmpegInit.h  RTAudioManager.h  main.cpp
projects/aribeiro-test/: CMakeLists.txt  main.cpp
projects/aribeiro-test-easing-eq/: CMakeLists.txt  EasingEqDrawer.h  LineRenderer.h  PointRenderer.h  main.cpp
projects/aribeiro-test-easing-eq/resources/: goudy_bookletter_1911.basof
projects/collision/: App.cpp  App.h  CMakeLists.txt  GLRenderState.cpp  GLRenderState.h  Grid.h  Models.h  Property.h  Rect.h  RenderSystem.cpp  RenderSystem.h  SharedPointer.cpp  SharedPointer.h  Size.h  Transform.cpp  Transform.h  VirtualProperty.h  main.cpp
projects/collision/Components/: Component.cpp  Component.h  ComponentCamera.cpp  ComponentCamera.h  ComponentFrustumCulling.cpp  ComponentFrustumCulling.h  ComponentFrustumVisibleSetColor.cpp  ComponentFrustumVisibleSetColor.h  ComponentLines.cpp  ComponentLines.h  ComponentMesh.cpp  ComponentMesh.h
projects/collision/unity-export-scene/: export-scene.unitypackage
projects/collision/util/: AppBase.cpp  AppBase.h  FreeMoveCamera.h  GLRenderState.cpp  GLRenderState.h  ReferenceCounter.h
projects/flv/: CMakeLists.txt  flv.h  main.cpp  test.h264
projects/flv-info/: CMakeLists.txt  flv.h  main.cpp
projects/flv/tests/: out.flv
projects/game-invader/: CMakeLists.txt  GameResources.cpp  GameResources.h  RenderSystem.cpp  RenderSystem.h  SpaceInvader.cpp  SpaceInvader.h  StarsBackGroundDraw.cpp  StarsBackGroundDraw.h  main.cpp
projects/game-invader/gamestate/: Menu.cpp  Menu.h  NavePrincipal.cpp  NavePrincipal.h  cgReproducer.cpp  cgReproducer.h  gameState.cpp  gameState.h  pauseState.cpp  pauseState.h  playState.cpp  playState.h
projects/game-tetris/: CMakeLists.txt  Game.h  main.cpp
projects/game-tetris/common/: RenderSystem.cpp  RenderSystem.h  Simulation.cpp
projects/game-tetris/tetris/: TableMounter.cpp  TableMounter.h  Tetris.cpp  Tetris.h  UnitMounter.cpp  UnitMounter.h
projects/post-processing-power-of-two/: App.h  CMakeLists.txt  GLPostProcessPowerOfTwo.cpp  GLPostProcessPowerOfTwo.h  RenderSystem.cpp  RenderSystem.h  main.cpp
projects/post-processing-power-of-two/bloom/: BloomPowerOfTwo.cpp  BloomPowerOfTwo.h  BloomPowerOfTwoBlurShader.h  BloomPowerOfTwoCompositeShader.h  BloomPowerOfTwoThresholdShader.h
projects/post-processing-power-of-two/common/: Simulation.h  common.h
projects/puc2019/: App.cpp  App.h  CMakeLists.txt  RenderSystem.h  main.cpp
projects/puc2019/util/: AppBase.cpp  AppBase.h  GLRenderState.cpp  GLRenderState.h
projects/raytracer/: CMakeLists.txt  FileReader.h  Raytracer.h  RaytracerObjects.h  main.cpp
projects/raytracer/tests/: test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt
projects/rpi-openmax/: BCMHostInit.cpp  BroadcomCamera.h  CMakeLists.txt  OMX.cpp  main.cpp
projects/rpi-video/: CMakeLists.txt  main.cpp
projects/rpi-video/openmax/: BCMHostInit.cpp  BCMHostInit.h  BroadcomAACEncode.h  BroadcomH264Decode.h  BroadcomH264Encode.h  BroadcomVideoDecode.h  BroadcomVideoEncode.h  OMX.cpp  OMX.h  OMXComponentBase.cpp  OMXComponentBase.h
projects/rpi-video/v4l2/: v4l2.cpp  v4l2.h
projects/template/: CMakeLists.txt  main.cpp
tools/assimp2bams/: AssimpExporter.h  BinaryReader.h  BinaryWriter.h  CMakeLists.txt  MD5.cpp  MD5.h  ModelContainer.h  main.cpp  md5_c.cpp  md5_c.h
tools/assimp2bams/old/: Bams.cpp  Bams.h  BamsExtractLines.bat  Color.cpp  Color.h  ModelManager.h  Node.h  Readme.txt  Scene.h  cenas.bams  cenas.blend
tools/conestep-generator/: CMakeLists.txt  conestep.h  main.cpp
tools/font2bitmap/: CMakeLists.txt  CreateFontWin32.bat  UTFops.h  charset.utf8  ft2_font_generator.cpp  ft2_font_generator.h  main.cpp  texturefontrenderer.cpp  texturefontrenderer.h
tools/font2bitmap/old/: ft2_font_generator.cpp  ft2_font_generator.h  pixelfontrenderer.cpp  pixelfontrenderer.h  pngwriter.cpp  pngwriter.h  texturefontrenderer.cpp  texturefontrenderer.h
tools/font2bitmap/win32/: getopt.c  getopt.h
(+294 files in other folders)
